# bridgic-coder

./: pyproject.toml
scr/: agent.py  cognitvie.py  context.py
